@@ -12,7 +12,8 @@ DIST gcc-4.4.1-specs-0.1.7.tar.bz2 1893 RMD160 52c21a4d8a3220660c8a9a71c4ce5977c
 DIST gcc-4.4.1-uclibc-patches-1.1.tar.bz2 2279 RMD160 b39cd85a9ec615511bb15c65e65aa61295699eda SHA1 8d5662e57533766ed7d63609df0c9d583771a7fc SHA256 b9592d5e14ddb8868599f1da6c2366b179d5a015a7330f819dd0e4fbf8523341
 DIST gcc-4.4.1.tar.bz2 62869928 RMD160 41cb4c76d1671b1d224d2a6e167ee183dd53d096 SHA1 9156ddb7e4cc72288ec31760d6ddc7981123a8a2 SHA256 cbefa9abd4adac0931e1b556072dcd8b32a360d4b95a94d7822c86bded803d5b
 EBUILD gcc-4.3.4-r1.ebuild 2158 RMD160 3fc887e746f738bdb28a3af6d819a0bf73cc20e4 SHA1 6f3f246cb947af3d39fe15308a98603fc5868b7e SHA256 6a3c619b187cb559039446d0d56c4b80874d120c7b16313be5f74dc4c92d1e34
+EBUILD gcc-4.3.4-r2.ebuild 2158 RMD160 3fc887e746f738bdb28a3af6d819a0bf73cc20e4 SHA1 6f3f246cb947af3d39fe15308a98603fc5868b7e SHA256 6a3c619b187cb559039446d0d56c4b80874d120c7b16313be5f74dc4c92d1e34
 EBUILD gcc-4.4.1-r1.ebuild 2023 RMD160 5aa15ccded984ae2dfa34f2b157bf63f70589be0 SHA1 70fdaf8d84e06b82ed08075f3143f4a359438779 SHA256 4a15a77cbb72c700c13088ca19abab448731b9d0804f66a2851d6d063491b2da
 EBUILD gcc-4.4.1-r2.ebuild 2023 RMD160 c629460c38ed5812f9a294f0a4683d8831229403 SHA1 89e29bd57d7348aedc0d6abae73a1aacea75bf81 SHA256 e159f425f0e31be027d455ff8dc3c9cb006cdcb81865598859fd467871344516
-MISC ChangeLog 832 RMD160 e5b4a4197d5b8a7aa999c9f8710c0a06087d0b55 SHA1 cf7a6bbbc11b79064a12400196fa6d30506477f6 SHA256 42800c954e08eab74373439fc108ba688fe42a3646c6231402245767c68b26fe
+MISC ChangeLog 977 RMD160 02aaa3b5cd1e5a9fd26645e7db8a9e48b6b37f6d SHA1 b39b974887dd34ce701fa95accb5464127de877e SHA256 cdfaae8c5a9a5b6dc3b301acdd393c058a905cbd4444916d6f37510cbd786eee
 MISC metadata.xml 1610 RMD160 de3ea2135f71f26100df1cc2c94f969f4fb58a10 SHA1 257abaaec0d10ed04c943b4db78f97833c6303ba SHA256 e0d36c00b5814e330850f731e2a4af8f9a1b77fde6499ce3964b7995520b13f6
